syntax = "proto3";
package cs425_mp2;

option go_package = "./protobuf";

message NodeInfoRow {
  enum NodeStatus {
    Alive = 0;
    Suspected = 1;
    Failed = 2; // TODO: might delete it since it should never be sent 
    Left = 3;
  }

  string nodeID = 1;
  int32 seqNum = 2;
  NodeStatus status = 3;
}

message NodeInfoList {
  repeated NodeInfoRow rows = 1;
}



message LeaderState {
  message AddrList {
    repeated string VM_addr = 1;
  }
  message FileList {
    repeated string file_names = 1;
  }
  message FileLock {
    repeated string ReadQueue = 1;
    repeated string WriteQueue = 2;
    int32 ReadCount = 3;
    int32 WriteCount = 4;
    int32 ConsecutiveReads = 5;
    int32 ConsecutiveWrites = 6;
  }
  
  int64 version = 1;
  map<string, AddrList> FileToVMMap = 2;
  map<string, FileList> VMToFileMap = 3;
  map<string, FileLock> FileLocks = 4;
}


message GroupMessage {
  enum MessageType {
    JOIN = 0;
    LEAVE = 1;
    GOSSIP = 2;
  }

  MessageType type = 1;
  NodeInfoList node_info_list = 2;
  optional LeaderState leader_state = 3; // Only make sense in MP3 for leader state replication.
}
