syntax = "proto3";
package cs425_mp3;

option go_package = "./protobuf";

enum SDFSRequestType {
    GET_REQ = 0;
    PUT_REQ = 1;
    DELETE_REQ_LEADER = 2; // the delete reqeust sent to leader, used to acquire a list of vms where the file is stored
    DELETE_REQ_FOLLOWER = 3; // the delete reqeust sent to followers, used to actually delete the file nodes
    LS_REQ = 4;
    STORE_REQ = 5;
}

enum SDFSResponseType {
    GET_RES = 0;
    PUT_RES = 1;
    DELETE_RES_LEADER = 2;
    DELETE_RES_FOLLOWER = 3;
    LS_RES = 4;
    STORE_RES = 5;
}

enum SDFSResponseStatus {
    RES_STATUS_OK = 0;
    RES_STATUS_FAILED = 1;
}

// Specific to request
message SDFSRequest {
    SDFSRequestType requestType = 1;
    string sdfsFileName = 2;
    string VM = 3;
}

// Specific to response
message SDFSResponse {
    SDFSResponseType responseType = 1;
    SDFSResponseStatus responseStatus = 2;
    repeated string replicas = 3;
    repeated string sdfsFileNames = 4;
    repeated string VMAddresses = 5;
    string error = 6;
}
